<resources>
    <string name="app_name">Quiz</string>
    <string name="name">Name : </string>
    <string name="ename">Enter your name here</string>
    <string name="wel">Quiz App</string>
    <string name="welcome">Welcome</string>
    <string name="ins">Instructions : </string>
    <string name="i1">> Only one chance is allowed</string>
    <string name="i2">> Once Clicked, answers can\'t be changed</string>
    <string name="start">To Start Click Next</string>
    <string name="next">Next</string>
    <string name="q1">Q1. Which of the following is the World\'s Biggest Island?</string>
    <string name="q1a1">Greenland</string>
    <string name="q1a2">New Guinea</string>
    <string name="q1a3">Borneo</string>
    <string name="q1a4">Great Britain</string>
    <string name="q2">Q2. Which of the following is the World\'s Longest River?</string>
    <string name="q2a1">Amazon</string>
    <string name="q2a2">Mississippi River</string>
    <string name="q2a3">Nile</string>
    <string name="q2a4">Yellow River</string>
    <string name="q3">Q3. What other word is commonly used to refer to a software program?</string>
    <string name="q3a1">Production</string>
    <string name="q3a2">Application</string>
    <string name="q3a3">Foundation</string>
    <string name="q3a4">Emulation</string>
    <string name="q4">Q4. Which of the following are programming languages?</string>
    <string name="q4a1">Python</string>
    <string name="q4a2">CSS</string>
    <string name="q4a3">Java</string>
    <string name="q4a4">HTML</string>
    <string name="q5">Q5. Which of the following countries are in Asia?</string>
    <string name="q5a1">India</string>
    <string name="q5a2">Japan</string>
    <string name="q5a3">Portugal</string>
    <string name="q5a4">Egypt</string>
    <string name="q6">Q6. How many official languages are present in India?</string>
    <string name="hint6">Enter your answer here</string>
    <string name="q7">Q7. In which year India officially demonetised the ₹500 and ₹1,000 notes?</string>
    <string name="submit">Submit</string>
    <string name="done">Done</string>
    <string name="result_hint">Result will be displayed here.</string>
    <string name="reset">Reset</string>
</resources>
