<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="30dp"
    android:background="@color/bgcolor"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/bgcolor"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:text="@string/welcome"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="50sp" />

        <RelativeLayout
            android:id="@+id/insrl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/textView"
            android:layout_marginTop="110dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/ins"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:paddingLeft="10dp"
                android:text="@string/ins"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/ins1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/ins"
                android:paddingLeft="40dp"
                android:text="@string/i1"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/ins2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/ins1"
                android:paddingLeft="40dp"
                android:text="@string/i2"
                android:textSize="16sp" />

        </RelativeLayout>

        <TextView
            android:id="@+id/start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/insrl"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="30dp"
            android:layout_marginTop="140dp"
            android:text="@string/start"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="18sp" />

        <Button
            android:id="@+id/next"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/start"
            android:layout_gravity="center_horizontal"
            android:background="@color/colorPrimary"
            android:onClick="buttonNext"
            android:text="@string/next"
            android:textColor="#ffff" />

    </RelativeLayout>
</ScrollView>